--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
             <p>Contate-nos!</p>
             <div class="social-icons">
 
-              <a href="https://www.instagram.com/lorenzonfts/"> <!---->
+              <a href="https://www.instagram.com/lorenzomr.digital/"> <!---->
                 <i class="fab fa-instagram"></i>
               </a>
             </div>
